fixed overlay for auto cards, aligned filter with listing container

--- a/src/components/listing/AutoListCard.css
+++ b/src/components/listing/AutoListCard.css
@@ -2,13 +2,24 @@
   width: 100%;
   height: 34rem;
   margin: 1rem auto;
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.auto_list_card_box::after {
+.auto_list_card_box_content {
+  width: 24rem;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.75rem;
+  border: 1px solid #fff;
+}
+
+.auto_list_card_box_content::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -18,16 +29,6 @@
   background-color: #000;
   opacity: 0.7;
   z-index: -1;
-}
-
-.auto_list_card_box_content {
-  width: 24rem;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.75rem;
-  border: 1px solid #fff;
 }
 
 /********** MEDIA QUERIES **********/
