--- a/src/components/listing/Listing.css
+++ b/src/components/listing/Listing.css
@@ -1,7 +1,7 @@
 .listing_container {
   width: 100%;
   height: auto;
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
   position: relative;
   background-color: #000;
 }
@@ -9,14 +9,13 @@
 .filter_container {
   width: 100%;
   max-width: 120rem;
-  height: 10rem;
+  height: 15rem;
   margin: 0 auto;
   padding: 1rem;
   display: flex;
-  justify-content: start;
-  align-items: center;
+  justify-content: center;
+  align-items: end;
   background-color: #000000ae;
-  /* border: 1px solid rgb(196, 160, 0); */
 }
 
 /* Select & Option Styling */
@@ -43,12 +42,14 @@
   max-width: 120rem;
   height: auto;
   margin-top: 4rem;
+  padding-bottom: 4rem;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 1;
+  /* border: 1px solid rgb(196, 160, 0); */
 }
 
 /* TESTING STYLING */
@@ -84,8 +85,13 @@
 /* Ipad Regular */
 
 @media only screen and (min-width: 768px) {
+  .filter_container {
+    justify-content: start;
+  }
+
   .card_listing_container {
     min-height: 70rem;
+    padding-bottom: 6rem;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: start;
@@ -128,7 +134,7 @@
   }
 
   .card_listing_container {
-    padding: 2rem;
+    padding: 2rem 2rem 6rem;
   }
 }
 
@@ -140,6 +146,10 @@
 /* Ipad Pro */
 
 @media only screen and (min-width: 1024px) {
+  .filter_container {
+    padding: 1rem 6.5rem;
+  }
+
   .card_listing_container {
     padding: 2rem 4rem;
   }
@@ -148,8 +158,13 @@
 /* Desktop Small */
 
 @media only screen and (min-width: 1280px) {
+  .filter_container {
+    padding: 1rem 5.75rem;
+  }
+
   .card_listing_container {
     margin: 0 auto;
+    padding: 2rem 4rem 6rem;
   }
 }
 
